[package]
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
name = "zooplaapi"
version = "0.1.0"

[dependencies]
dotenv = "0.10.1"
failure = "0.1.1"
reqwest = "0.8.4"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"

[dependencies.diesel]
features = ["postgres"]
version = "1.1.1"

[dev-dependencies]
mockito = "0.9.0"
